--- a/package.json
+++ b/package.json
@@ -3,8 +3,13 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "task_1": "nodemon src/HW_1/task_1.js",
+    "task_2": "nodemon src/HW_1/task_2.js",
+    "task_3-1": "nodemon src/HW_1/task_3-1.js",
+    "task_3-2": "nodemon src/HW_1/task_3-2.js",
+    "build": "babel src -d build"
   },
   "repository": {
     "type": "git",
@@ -17,6 +22,12 @@
   },
   "homepage": "https://github.com/arnygora/epam_node_course#readme",
   "devDependencies": {
+    "@babel/cli": "^7.17.10",
+    "@babel/core": "^7.17.10",
+    "@babel/preset-env": "^7.17.10",
     "nodemon": "^2.0.16"
+  },
+  "dependencies": {
+    "csvtojson": "^2.0.10"
   }
 }
