--- a/package.json
+++ b/package.json
@@ -3,12 +3,8 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "type": "module",
   "scripts": {
-    "task_1": "nodemon src/HW_1/task_1.js",
-    "task_2": "nodemon src/HW_1/task_2.js",
-    "task_3-1": "nodemon src/HW_1/task_3-1.js",
-    "task_3-2": "nodemon src/HW_1/task_3-2.js",
+    "task_2": "nodemon src/HW_2/index.js",
     "build": "babel src -d build"
   },
   "repository": {
@@ -28,6 +24,11 @@
     "nodemon": "^2.0.16"
   },
   "dependencies": {
-    "csvtojson": "^2.0.10"
+    "express": "^4.18.1",
+    "body-parser": "^1.20.0",
+    "csvtojson": "^2.0.10",
+    "express-joi-validation": "^5.0.1",
+    "joi": "^17.6.0",
+    "uuid": "^8.3.2"
   }
 }
