--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "task_2": "nodemon src/HW_2/index.js",
+    "task_3": "nodemon src/HW_3/index.js",
     "build": "babel src -d build"
   },
   "repository": {
@@ -24,11 +24,14 @@
     "nodemon": "^2.0.16"
   },
   "dependencies": {
-    "express": "^4.18.1",
     "body-parser": "^1.20.0",
     "csvtojson": "^2.0.10",
+    "express": "^4.18.1",
     "express-joi-validation": "^5.0.1",
     "joi": "^17.6.0",
+    "pg": "^8.7.3",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.20.1",
     "uuid": "^8.3.2"
   }
 }
